--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,12 @@
 {
     "version": 2,
-    "builds": [{ "src": "public/**/*", "use": "@vercel/static-build" }],
+    "builds": [
+      { "src": "public/**/*", "use": "@vercel/static-build" },
+      { "src": "src/**/*", "use": "@vercel/node" }
+    ],
     "routes": [
       { "src": "/(.*)", "dest": "/public/$1" }
     ]
   }
+  
   
