--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,10 +1,7 @@
 {
     "version": 2,
-    "builds": [
-      { "src": "src/**/*", "use": "@vercel/node" }
-    ],
     "routes": [
-      { "src": "/(.*)", "dest": "/public/$1" }
+      { "src":"/[^.]+", "dest":"/", "status":200 }
     ]
   }
   
