--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,12 +8,12 @@
     ],
     "routes": [
         {
-            "src": "/.*",
-            "dest": "/index.js"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "./index.js",
+            "methods":["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers":{
+                "Access-Control-Allow-Origin":"*"
+            }
         }
     ]
 }
